--- a/team.Rmd
+++ b/team.Rmd
@@ -45,3 +45,29 @@ mtext(text = 'Primary Flavor',side=1, line= 7.0)
 summary(choco$Rating[choco$Characteristics1 == 'acidic'])
 summary(choco$Rating[choco$Characteristics1 == 'chalky'])
 summary(choco$Rating[choco$Characteristics1 == 'unrefined'])
+```
+
+5.Brainstorm two analyses you would like to perform with your teammate. Describe in plain language what comparisons are you making. Create suitable numerical and graphical summaries for your analyses. Describe the results.
+
+
+**Analysis 2: ** In this analysis, I was interested to see if a certain set of ingredients tended to produce chocolate bars with higher ratings.To begin, I searched for the ingredient profiles with the most
+entries and subsetted a vector containing only those entries, leaving out chocolate bars with very uinque ingredient profiles. I then subsetted the dataframe to contain only those ingredient profiles. From there, I created a boxplot, showing the distributions of ratings for
+each ingredient profile. From the plot, Ingredient profiles 2-B,S, 3-B,S,C,and B,S,C,L tended to perform slighly better. The introduction of V,into the ingredient profile did seem to decrease the performance overall. Additionally, Ingredient profile 5- B,S,C,V,L had the highest IQR of any ingredient profile,illustrated in the summary statistics. 
+
+```{r, results = 'hide'}
+choco <- read.csv("https://raw.githubusercontent.com/xdaiISU/ds202materials/master/hwlabs/data/choco.csv")
+
+sort(table(choco$Ingredients), decreasing = TRUE)
+IngredientVec <- c('2- B,S','3- B,S,C','4- B,S,C,L','4- B,S,C,V','5- B,S,C,V,L')
+choco.SubIngredients = choco[choco$Ingredients %in% IngredientVec ,]
+choco.SubIngredients$Factor = as.factor(choco.SubIngredients$Ingredients)
+```
+
+```{r}
+boxplot(choco.SubIngredients$Rating ~ choco.SubIngredients$Factor, xlab = 'Ingredient Profile',ylab = 'Rating', main = 'Ingredient Profile vs Rating')
+
+summary(choco.SubIngredients$Rating[choco.SubIngredients$Ingredients == '2- B,S'])
+summary(choco.SubIngredients$Rating[choco.SubIngredients$Ingredients == '3- B,S,C'])
+summary(choco.SubIngredients$Rating[choco.SubIngredients$Ingredients == '4- B,S,C,L'])
+summary(choco.SubIngredients$Rating[choco.SubIngredients$Ingredients == '4- B,S,C,V'])
+summary(choco.SubIngredients$Rating[choco.SubIngredients$Ingredients == '5- B,S,C,V,L'])
